# games

./: .gitignore  Ball.cpp  Ball.h  Bar.h  Brick.cpp  Brick.h  Food.cpp  Food.h  Game.cpp  Game.h  Makefile  Planet.cpp  Planet.h  PlanetConquer.cpp  README.md  Snake.cpp  Snake.h  defs.h  main.cpp
EuroJackpot/: .gitignore  Makefile  README.md  eurojackpot  main.cpp
EuroJackpot/qt/: EuroJackpot  EuroJackpot.pro  MainWindow.cpp  MainWindow.h  (+3 more)
PlanetConquer/: main.py
bomberman/: .gitignore  CMakeLists.txt  README.md  config.ini
bomberman/src/: AppCallbacks.cpp  Bomb.cpp  Bomb.h  Config.cpp  Config.h  Enemy.cpp  Enemy.h  Entity.h  Explosion.cpp  Explosion.h  Game.cpp  Game.h  GameOverState.cpp  GameState.h  Map.cpp  Map.h  MenuState.cpp  MenuState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h
breakout/: breakout.py
brickbreaker/: .gitignore  Bar.cpp  Makefile  Pos.h  defs.h  main.cpp
cpp/: .gitignore  Game.cpp  Game.h  Gitter.cpp  Gitter.h  Makefile
flappy/: .gitignore  Makefile  config.ini
game_of_life/: .gitignore  README.md
massatraction/: .gitignore  Body.cpp  Body.h  Game.cpp  Game.h  Makefile  README.md  defs.h  main.cpp  massatraction
minesweeper/: .gitignore  Makefile  README.md
moonlander/: Makefile  main.cpp
planetconquer/: Makefile
snake/: .gitignore  Game.cpp  Game.h  Makefile  Point.h  README.md  Snake.py  TextRenderer.cpp  TextRenderer.h  main.cpp  snake.py
spaceinvaders/: .gitignore  Makefile  config.ini
tetris/: .gitignore  Makefile  README.md
towerdefense/: .gitignore  Makefile  main.cpp
(+63 files in other folders)
